[package]
name = "caratls"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", default-features = false, features = ["io-util"] }
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
thiserror = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls-pki-types = { version = "1.10" }
rustls = { version = "0.23" }
tokio-rustls = { version = "0.26" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rustls-pki-types = { version = "1.10", features = ["web"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
	"ring",
] }


[dev-dependencies]
tokio = { version = "1.42", features = [
	"net",
	"io-util",
	"rt",
	"macros",
	"time",
] }
